# GrocerEase

./: .codecov.yml  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Contribution_Guidelines.md  GrocerEase.gitattributes  README.md  dconfig
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: aaa.yml  build_and_run_DEBUG.yml  cmake.yml  codeql-analysis.yml  license_check.yml
Compute_Angle/: compute_angle.cpp
Estimate Robot Angle/: estimateRobotAngle.cpp
GPIO/: GPIO.cpp
Hardware/Design/: design_logs.md
Main Program/: main_program.cpp
Motor Testing/: motor_testing.cpp
RSSI_Calculation/: get_RSSI.cpp
Raspi_RSSI/RSSI/: Screenshot.md  rssi.cpp  rssi.h
Raspi_RSSI/RSSI/src/: rssi.cpp
Raspi_RSSI/RSSI_gist_addy/: CMakeLists.txt
Raspi_RSSI/SectionF/src/: bluetooth.txt  rssi_1  rssi_1.cpp
Raspi_RSSI/bl_dbus/src/: bluez_dbus.cpp
Raspi_RSSI/bl_dbus_pastebin/src/: bluez_dbus.cpp
Raspi_RSSI/bluez5/: CMakeLists.txt
Raspi_RSSI/bluez5/include/: rssi.h
Raspi_RSSI/bluez5/src/: RSSI_bluez.cpp
Raspi_RSSI/bluez5_fpermissive/include/: rssi.h
Raspi_RSSI/bluez5_fpermissive/src/: RSSI_bluez.cpp
Raspi_RSSI/intel_rssi/: CMakeLists.txt
Raspi_RSSI/intel_rssi/src/: simple.c
Raspi_RSSI/promising/rssi_addy_infinite_loop/: CMakeLists.txt
Raspi_RSSI/rssi_M/: CMakeLists.txt
Raspi_RSSI/rssi_M/src/: rssi.cpp
Raspi_RSSI/rssi_addy/: CMakeLists.txt
Raspi_RSSI/rssi_final/: a.out  text.txt
Raspi_RSSI/rssi_mit/: CMakeLists.txt
Raspi_RSSI/rssi_mit/src/: rssi.cpp
Raspi_RSSI/rssi_parth_gist/: CMakeLists.txt
Raspi_RSSI/rssi_parth_gist/src/: rssi_1.c
Raspi_RSSI/rssi_parth_gist/utils/: output.txt
Raspi_RSSI/tested/RSSI_gist_addy/: CMakeLists.txt
Raspi_RSSI/tested/bitbucket_david_init1/: CMakeLists.txt
Raspi_RSSI/tested/bitbucket_david_init1/src/: get_RSSI_bitbucket.cpp
Raspi_RSSI/tested/bl_dbus_pastebin/: CMakeLists.txt
Raspi_RSSI/tested/bl_dbus_pastebin/src/: bluez_dbus.cpp
html/: ComputeAngle_8cpp_source.html  ComputeAngle__testing_8cpp_source.html  GPIO_8h_source.html  annotated.html  cart_8cpp_source.html  cart_8h_source.html  cart__callback_8cpp_source.html  cart__callback_8h_source.html  cart__callback__TEST_8cpp_source.html  classCart-members.html  classCart.html  classCart_1_1CompAngleCallback-members.html  classCart_1_1CompAngleCallback.html  classComputeAngle-members.html  classComputeAngle.html  classDisplayAngleCallback-members.html  classDisplayAngleCallback.html  classGrocerease-members.html  classGrocerease.html  classes.html  classstd_1_1GPIO-members.html  classstd_1_1GPIO.html  compute__angle_8cpp_source.html  dir_5edc6fd82afc11b5ec3418996eccf119.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6f645bace5c87439c942ac63dc4535b0.html  dir_a15c3b45371a10df53a39ad97da2140e.html  dir_cbdb8362360e11eafe2fa3bc74cf0ffd.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_fec68c966c64ba0fdf39c2015f744334.html  estimateRobotAngle_8cpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  grocerease_8cpp_source.html  grocerease_8h_source.html  hierarchy.html  include_2cart_8h_source.html  index.html  (+20 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js
include/: GPIO.h  GPIO.hh  cart.h  cart_callback.h  grocerease.h
latex/: ComputeAngle_8cpp_source.tex  ComputeAngle__testing_8cpp_source.tex  GPIO_8h_source.tex  annotated.tex  cart_8cpp_source.tex  cart_8h_source.tex  classCart.tex  classCart_1_1CompAngleCallback.eps  classCart_1_1CompAngleCallback.tex  classComputeAngle.tex  classDisplayAngleCallback.eps  classDisplayAngleCallback.tex  classGrocerease.tex  classstd_1_1GPIO.tex  compute__angle_8cpp_source.tex  estimateRobotAngle_8cpp_source.tex  files.tex  grocerease_8cpp_source.tex  grocerease_8h_source.tex  hierarchy.tex  include_2cart_8h_source.tex  main__program_8cpp_source.tex  main__program__delete_8cpp_source.tex  main__program__oldver_8cpp_source.tex  md_CODE_OF_CONDUCT.tex  md_CONTRIBUTING.tex  md_README.tex  motor__testing_8cpp_source.tex  namespaces.tex  namespacestd.tex  refman.tex  src_2GPIO_8cpp_source.tex  src_2cart_8cpp_source.tex  src_2motor__testing_8cpp_source.tex  test__cart_8cpp_source.tex  utils_2patches_2GPIO_8cpp_source.tex  utils_2patches_2computeAngle_2include_2cart_8h_source.tex  utils_2patches_2computeAngle_2src_2cart_8cpp_source.tex  utils_2patches_2motor__testing_8cpp_source.tex  write__motor_8cpp_source.tex
main program/: main.cpp
mobile-app/: README.md
rssi_value/rssi_basic_scan/: CMakeLists.txt
rssi_value/rssi_basic_scan/src/: rssi.cpp
rssi_value/rssi_demo/: rssi_test.c
rssi_value/rssi_detailing/: CMakeLists.txt
rssi_value/rssi_detailing/src/: rssi_details.c
rssi_value/rssi_testing/: CMakeLists.txt
rssi_value/rssi_testing/src/: rssi.c
src/: CMakeLists.txt  ComputeAngle.cc  ComputeAngle.cpp  ComputeAngleTest.cpp  ComputeAngle_TEST.cpp  GPIO.cc  GPIO.cpp  a.out  cart.cpp  cart_callback.cpp  cart_callback_TEST.cpp  grocerease.cpp  main.cpp  main_program.cpp  main_program_delete.cpp  main_program_oldver.cpp  motor_testing.cpp
src/Motor Testing/: motor_testing.cpp
test/: CMakeLists.txt  ComputeAngleTest.cpp
test/src/: ComputeAngleTest.cc
utils/: Components_Sourcing&Costing.xlsx  HardwareUpdates_LogFile.md  directory-tree.md
utils/Compute angle flowchart/: code.txt
utils/Flow_Diagrams/main program sd/: code.txt
utils/GPIO deps/: GPIO
utils/GPIO flowchart/: GPIO_final.txt
utils/flow diagrams/compute angle/: code.txt
utils/hardware/logs/: hardware_logs.md
utils/hardware_logs/: hardware_logs.md
utils/patches/: GPIO.h  estimateRobotAngle.cpp  main_program.cpp  motor_testing.cpp
writeMotor/: write_motor.cpp
(+7 files in other folders)
